// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CashFlowSimulationService buffers future outflows with income only if income arrives first 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 200,
      "safeToSpend": 200,
      "shortfall": 0,
      "startingBalance": 1000,
      "usageDetails": {
        "topInflows": [
          {
            "amount": 1000,
            "id": "pp-income",
            "isPostIncome": true,
            "name": "Salary",
            "source": "PLANNED_PAYMENT",
          },
        ],
        "topOutflows": [
          {
            "amount": 800,
            "id": "pp-expense",
            "isPostIncome": false,
            "name": "Rent",
            "source": "PLANNED_PAYMENT",
          },
        ],
        "totalInflow": 1000,
        "totalOutflow": 800,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 0,
      "nextMonthDays": 6,
      "nextMonthProjected": 0,
    },
    "committed": [
      {
        "accountId": "landlord",
        "accountName": "Rent",
        "amount": 800,
        "details": [
          {
            "amount": 800,
            "dayOffset": 5,
            "id": "pp-expense",
            "name": "Rent",
            "type": "PLANNED_PAYMENT",
          },
        ],
      },
    ],
    "debt": [],
    "income": [
      {
        "amount": 1000,
        "dayOffset": 10,
        "id": "pp-income",
        "name": "Salary",
        "type": "PLANNED_PAYMENT",
      },
    ],
    "liabilities": {
      "commitments": [],
      "committed": 0,
      "committedCreditCard": 0,
      "committedOther": 0,
      "debtEntries": [],
      "flows": [],
      "total": 0,
      "totalCreditCard": 0,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [],
    "firstMajorInflowDay": 10,
  },
  "projections": {
    "dailyBudgetBurns": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "flowByDayOffset": Map {
      10 => 1000,
      5 => -800,
    },
    "points": [
      {
        "isProjected": true,
        "timestamp": 1772908200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772994600000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773081000000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773167400000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773253800000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773340200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 800,
            "context": undefined,
            "name": "Rent",
            "type": "OUTFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1773426600000,
        "value": 200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773513000000,
        "value": 200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773599400000,
        "value": 200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773685800000,
        "value": 200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773772200000,
        "value": 200,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 1000,
            "context": undefined,
            "name": "Salary",
            "type": "INFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1773858600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775068200000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775154600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775241000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775327400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775413800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775500200000,
        "value": 1200,
      },
    ],
    "safeToSpendDailyBreakdown": Map {
      10 => [
        {
          "amount": 1000,
          "context": undefined,
          "name": "Salary",
          "type": "INFLOW",
        },
      ],
      5 => [
        {
          "amount": 800,
          "context": undefined,
          "name": "Rent",
          "type": "OUTFLOW",
        },
      ],
    },
  },
  "summary": {
    "firstMajorInflowDay": 10,
    "safeDaysCount": null,
    "safeToSpend": 200,
    "shortfall": 0,
    "totalCommittedPlanned": 800,
    "totalFutureInflow": 1000,
    "totalOrganicInflow": 1000,
    "totalOrganicOutflow": 800,
    "trajectoryMinBalance": 200,
  },
}
`;

exports[`CashFlowSimulationService correctly commits statement balance when today is before the due date 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 1400,
      "safeToSpend": 1400,
      "shortfall": 0,
      "startingBalance": 2000,
      "usageDetails": {
        "topInflows": [],
        "topOutflows": [
          {
            "amount": 600,
            "id": undefined,
            "isPostIncome": false,
            "name": "Primary Card",
            "source": "LIABILITY",
          },
        ],
        "totalInflow": 0,
        "totalOutflow": 600,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 0,
      "nextMonthDays": 0,
      "nextMonthProjected": 0,
    },
    "committed": [
      {
        "accountId": "cc-1",
        "accountName": "Primary Card",
        "amount": 600,
        "details": [
          {
            "amount": 600,
            "dayOffset": 3,
            "id": "cc-1-3",
            "name": "Primary Card",
            "type": "FALLBACK",
          },
        ],
      },
    ],
    "debt": [
      {
        "accountId": "cc-1",
        "accountName": "Primary Card",
        "amount": 600,
        "dayOffset": 3,
        "type": "FALLBACK",
      },
    ],
    "income": [],
    "liabilities": {
      "commitments": [
        {
          "accountId": "cc-1",
          "accountName": "Primary Card",
          "amount": 600,
          "details": [
            {
              "amount": 600,
              "dayOffset": 3,
              "id": "cc-1-3",
              "name": "Primary Card",
              "type": "FALLBACK",
            },
          ],
        },
      ],
      "committed": 600,
      "committedCreditCard": 600,
      "committedOther": 0,
      "debtEntries": [
        {
          "accountId": "cc-1",
          "accountName": "Primary Card",
          "amount": 600,
          "dayOffset": 3,
          "type": "FALLBACK",
        },
      ],
      "flows": [
        {
          "accountId": "cash-1",
          "amount": -600,
          "context": "Current bill",
          "dayOffset": 3,
          "name": "Primary Card",
          "source": "LIABILITY",
          "type": "OUTFLOW",
        },
      ],
      "total": 1000,
      "totalCreditCard": 1000,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [
      "CREDIT_CARD",
    ],
    "firstMajorInflowDay": null,
  },
  "projections": {
    "dailyBudgetBurns": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "flowByDayOffset": Map {
      3 => -600,
    },
    "points": [
      {
        "isProjected": true,
        "timestamp": 1772389800000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772476200000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772562600000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772649000000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 600,
            "context": "Current bill",
            "name": "Primary Card",
            "type": "OUTFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1772735400000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772821800000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772908200000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772994600000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773081000000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773167400000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773253800000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773340200000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773426600000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773513000000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773599400000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773685800000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773772200000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773858600000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 1400,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 1400,
      },
    ],
    "safeToSpendDailyBreakdown": Map {
      3 => [
        {
          "amount": 600,
          "context": "Current bill",
          "name": "Primary Card",
          "type": "OUTFLOW",
        },
      ],
    },
  },
  "summary": {
    "firstMajorInflowDay": null,
    "safeDaysCount": null,
    "safeToSpend": 1400,
    "shortfall": 0,
    "totalCommittedPlanned": 0,
    "totalFutureInflow": 0,
    "totalOrganicInflow": 0,
    "totalOrganicOutflow": 0,
    "trajectoryMinBalance": 1400,
  },
}
`;

exports[`CashFlowSimulationService does not double count planned outflows covered by budget 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 40,
      "safeToSpend": 40,
      "shortfall": 0,
      "startingBalance": 1000,
      "usageDetails": {
        "topInflows": [],
        "topOutflows": [
          {
            "amount": 960,
            "id": undefined,
            "isPostIncome": false,
            "name": "Budget Burn",
            "source": "BUDGET",
          },
          {
            "amount": 15,
            "id": "pp-util",
            "isPostIncome": false,
            "name": "Electric Bill",
            "source": "PLANNED_PAYMENT",
          },
        ],
        "totalInflow": 0,
        "totalOutflow": 975,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 384,
      "nextMonthDays": 18,
      "nextMonthProjected": 576,
    },
    "committed": [
      {
        "accountId": "exp-covered",
        "accountName": "Utilities",
        "amount": 960,
        "details": [
          {
            "amount": 960,
            "id": "Utility Budget",
            "name": "Utility Budget",
            "type": "BUDGET",
          },
        ],
      },
      {
        "accountId": "exp-covered",
        "accountName": "Utilities",
        "amount": 15,
        "details": [
          {
            "amount": 15,
            "dayOffset": 0,
            "id": "pp-util",
            "name": "Electric Bill",
            "type": "PLANNED_PAYMENT",
          },
        ],
      },
    ],
    "debt": [],
    "income": [],
    "liabilities": {
      "commitments": [],
      "committed": 0,
      "committedCreditCard": 0,
      "committedOther": 0,
      "debtEntries": [],
      "flows": [],
      "total": 0,
      "totalCreditCard": 0,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [],
    "firstMajorInflowDay": null,
  },
  "projections": {
    "dailyBudgetBurns": [
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
      32,
    ],
    "flowByDayOffset": Map {
      0 => -15,
    },
    "points": [
      {
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 1000,
      },
      {
        "dailyBurn": 17,
        "details": [
          {
            "amount": 15,
            "context": undefined,
            "name": "Electric Bill",
            "type": "OUTFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 968,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 936,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 904,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 872,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 840,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 808,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 776,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 744,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 712,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 680,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 648,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 616,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775068200000,
        "value": 584,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775154600000,
        "value": 552,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775241000000,
        "value": 520,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775327400000,
        "value": 488,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775413800000,
        "value": 456,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775500200000,
        "value": 424,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775586600000,
        "value": 392,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775673000000,
        "value": 360,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775759400000,
        "value": 328,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775845800000,
        "value": 296,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775932200000,
        "value": 264,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776018600000,
        "value": 232,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776105000000,
        "value": 200,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776191400000,
        "value": 168,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776277800000,
        "value": 136,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776364200000,
        "value": 104,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776450600000,
        "value": 72,
      },
      {
        "dailyBurn": 32,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776537000000,
        "value": 40,
      },
    ],
    "safeToSpendDailyBreakdown": Map {
      0 => [
        {
          "amount": 15,
          "context": undefined,
          "name": "Electric Bill",
          "type": "OUTFLOW",
        },
      ],
    },
  },
  "summary": {
    "firstMajorInflowDay": null,
    "safeDaysCount": null,
    "safeToSpend": 40,
    "shortfall": 0,
    "totalCommittedPlanned": 15,
    "totalFutureInflow": 0,
    "totalOrganicInflow": 0,
    "totalOrganicOutflow": 15,
    "trajectoryMinBalance": 40,
  },
}
`;

exports[`CashFlowSimulationService does not include future income in safe-to-spend (conservative logic) 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 1000,
      "safeToSpend": 1000,
      "shortfall": 0,
      "startingBalance": 1000,
      "usageDetails": {
        "topInflows": [
          {
            "amount": 1000,
            "id": "pp-income",
            "isPostIncome": true,
            "name": "Salary",
            "source": "PLANNED_PAYMENT",
          },
        ],
        "topOutflows": [
          {
            "amount": 800,
            "id": "pp-expense",
            "isPostIncome": true,
            "name": "Rent",
            "source": "PLANNED_PAYMENT",
          },
        ],
        "totalInflow": 1000,
        "totalOutflow": 800,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 0,
      "nextMonthDays": 6,
      "nextMonthProjected": 0,
    },
    "committed": [
      {
        "accountId": "landlord",
        "accountName": "Rent",
        "amount": 800,
        "details": [
          {
            "amount": 800,
            "dayOffset": 10,
            "id": "pp-expense",
            "name": "Rent",
            "type": "PLANNED_PAYMENT",
          },
        ],
      },
    ],
    "debt": [],
    "income": [
      {
        "amount": 1000,
        "dayOffset": 5,
        "id": "pp-income",
        "name": "Salary",
        "type": "PLANNED_PAYMENT",
      },
    ],
    "liabilities": {
      "commitments": [],
      "committed": 0,
      "committedCreditCard": 0,
      "committedOther": 0,
      "debtEntries": [],
      "flows": [],
      "total": 0,
      "totalCreditCard": 0,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [],
    "firstMajorInflowDay": 5,
  },
  "projections": {
    "dailyBudgetBurns": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "flowByDayOffset": Map {
      5 => 1000,
      10 => -800,
    },
    "points": [
      {
        "isProjected": true,
        "timestamp": 1772908200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772994600000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773081000000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773167400000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773253800000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773340200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 1000,
            "context": undefined,
            "name": "Salary",
            "type": "INFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1773426600000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773513000000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773599400000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773685800000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773772200000,
        "value": 2000,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 800,
            "context": undefined,
            "name": "Rent",
            "type": "OUTFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1773858600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775068200000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775154600000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775241000000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775327400000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775413800000,
        "value": 1200,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775500200000,
        "value": 1200,
      },
    ],
    "safeToSpendDailyBreakdown": Map {
      5 => [
        {
          "amount": 1000,
          "context": undefined,
          "name": "Salary",
          "type": "INFLOW",
        },
      ],
      10 => [
        {
          "amount": 800,
          "context": undefined,
          "name": "Rent",
          "type": "OUTFLOW",
        },
      ],
    },
  },
  "summary": {
    "firstMajorInflowDay": 5,
    "safeDaysCount": null,
    "safeToSpend": 1000,
    "shortfall": 0,
    "totalCommittedPlanned": 800,
    "totalFutureInflow": 1000,
    "totalOrganicInflow": 1000,
    "totalOrganicOutflow": 800,
    "trajectoryMinBalance": 1000,
  },
}
`;

exports[`CashFlowSimulationService implements smoothed budget burn over 30 days 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 340,
      "safeToSpend": 340,
      "shortfall": 0,
      "startingBalance": 1000,
      "usageDetails": {
        "topInflows": [],
        "topOutflows": [
          {
            "amount": 660,
            "id": undefined,
            "isPostIncome": false,
            "name": "Budget Burn",
            "source": "BUDGET",
          },
        ],
        "totalInflow": 0,
        "totalOutflow": 660,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 264,
      "nextMonthDays": 18,
      "nextMonthProjected": 396,
    },
    "committed": [
      {
        "accountId": "exp-1",
        "accountName": "Food",
        "amount": 660,
        "details": [
          {
            "amount": 660,
            "id": "Food Budget",
            "name": "Food Budget",
            "type": "BUDGET",
          },
        ],
      },
    ],
    "debt": [],
    "income": [],
    "liabilities": {
      "commitments": [],
      "committed": 0,
      "committedCreditCard": 0,
      "committedOther": 0,
      "debtEntries": [],
      "flows": [],
      "total": 0,
      "totalCreditCard": 0,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [],
    "firstMajorInflowDay": null,
  },
  "projections": {
    "dailyBudgetBurns": [
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
      22,
    ],
    "flowByDayOffset": Map {},
    "points": [
      {
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 1000,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 978,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 956,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 934,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 912,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 890,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 868,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 846,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 824,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 802,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 780,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 758,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 736,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775068200000,
        "value": 714,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775154600000,
        "value": 692,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775241000000,
        "value": 670,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775327400000,
        "value": 648,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775413800000,
        "value": 626,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775500200000,
        "value": 604,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775586600000,
        "value": 582,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775673000000,
        "value": 560,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775759400000,
        "value": 538,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775845800000,
        "value": 516,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775932200000,
        "value": 494,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776018600000,
        "value": 472,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776105000000,
        "value": 450,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776191400000,
        "value": 428,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776277800000,
        "value": 406,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776364200000,
        "value": 384,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776450600000,
        "value": 362,
      },
      {
        "dailyBurn": 22,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1776537000000,
        "value": 340,
      },
    ],
    "safeToSpendDailyBreakdown": Map {},
  },
  "summary": {
    "firstMajorInflowDay": null,
    "safeDaysCount": null,
    "safeToSpend": 340,
    "shortfall": 0,
    "totalCommittedPlanned": 0,
    "totalFutureInflow": 0,
    "totalOrganicInflow": 0,
    "totalOrganicOutflow": 0,
    "trajectoryMinBalance": 340,
  },
}
`;

exports[`CashFlowSimulationService tracks manual liability payments as commitments without subtracting the whole balance twice 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 700,
      "safeToSpend": 700,
      "shortfall": 0,
      "startingBalance": 1000,
      "usageDetails": {
        "topInflows": [],
        "topOutflows": [
          {
            "amount": 300,
            "id": "pp-1",
            "isPostIncome": false,
            "name": "Card payment",
            "source": "PLANNED_PAYMENT",
          },
        ],
        "totalInflow": 0,
        "totalOutflow": 300,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 0,
      "nextMonthDays": 6,
      "nextMonthProjected": 0,
    },
    "committed": [
      {
        "accountId": "cc-1",
        "accountName": "Card payment",
        "amount": 300,
        "details": [
          {
            "amount": 300,
            "dayOffset": 2,
            "id": "pp-1",
            "name": "Card payment",
            "type": "PLANNED_PAYMENT",
          },
        ],
      },
    ],
    "debt": [],
    "income": [],
    "liabilities": {
      "commitments": [],
      "committed": 0,
      "committedCreditCard": 0,
      "committedOther": 0,
      "debtEntries": [],
      "flows": [],
      "total": 400,
      "totalCreditCard": 400,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [
      "CREDIT_CARD",
    ],
    "firstMajorInflowDay": null,
  },
  "projections": {
    "dailyBudgetBurns": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "flowByDayOffset": Map {
      2 => -300,
    },
    "points": [
      {
        "isProjected": true,
        "timestamp": 1772908200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772994600000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773081000000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 300,
            "context": undefined,
            "name": "Card payment",
            "type": "OUTFLOW",
          },
          {
            "amount": 300,
            "context": undefined,
            "name": "Card payment",
            "type": "INFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1773167400000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773253800000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773340200000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773426600000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773513000000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773599400000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773685800000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773772200000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773858600000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775068200000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775154600000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775241000000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775327400000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775413800000,
        "value": 700,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775500200000,
        "value": 700,
      },
    ],
    "safeToSpendDailyBreakdown": Map {
      2 => [
        {
          "amount": 300,
          "context": undefined,
          "name": "Card payment",
          "type": "OUTFLOW",
        },
        {
          "amount": 300,
          "context": undefined,
          "name": "Card payment",
          "type": "INFLOW",
        },
      ],
    },
  },
  "summary": {
    "firstMajorInflowDay": null,
    "safeDaysCount": null,
    "safeToSpend": 700,
    "shortfall": 0,
    "totalCommittedPlanned": 300,
    "totalFutureInflow": 300,
    "totalOrganicInflow": 300,
    "totalOrganicOutflow": 300,
    "trajectoryMinBalance": 700,
  },
}
`;

exports[`CashFlowSimulationService treats planned income to a liability account as an inflow 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 1000,
      "safeToSpend": 1000,
      "shortfall": 0,
      "startingBalance": 1000,
      "usageDetails": {
        "topInflows": [],
        "topOutflows": [],
        "totalInflow": 0,
        "totalOutflow": 0,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 0,
      "nextMonthDays": 6,
      "nextMonthProjected": 0,
    },
    "committed": [],
    "debt": [],
    "income": [
      {
        "amount": 500,
        "dayOffset": 5,
        "id": "pp-income",
        "name": "Side Project Income",
        "type": "PLANNED_PAYMENT",
      },
    ],
    "liabilities": {
      "commitments": [],
      "committed": 0,
      "committedCreditCard": 0,
      "committedOther": 0,
      "debtEntries": [],
      "flows": [],
      "total": 400,
      "totalCreditCard": 400,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [
      "CREDIT_CARD",
    ],
    "firstMajorInflowDay": null,
  },
  "projections": {
    "dailyBudgetBurns": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "flowByDayOffset": Map {
      5 => 500,
    },
    "points": [
      {
        "isProjected": true,
        "timestamp": 1772908200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772994600000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773081000000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773167400000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773253800000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773340200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 500,
            "context": undefined,
            "name": "Side Project Income",
            "type": "INFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1773426600000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773513000000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773599400000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773685800000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773772200000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773858600000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775068200000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775154600000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775241000000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775327400000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775413800000,
        "value": 1500,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775500200000,
        "value": 1500,
      },
    ],
    "safeToSpendDailyBreakdown": Map {
      5 => [
        {
          "amount": 500,
          "context": undefined,
          "name": "Side Project Income",
          "type": "INFLOW",
        },
      ],
    },
  },
  "summary": {
    "firstMajorInflowDay": null,
    "safeDaysCount": null,
    "safeToSpend": 1000,
    "shortfall": 0,
    "totalCommittedPlanned": 0,
    "totalFutureInflow": 500,
    "totalOrganicInflow": 500,
    "totalOrganicOutflow": 0,
    "trajectoryMinBalance": 1000,
  },
}
`;

exports[`CashFlowSimulationService uses only the credit card statement due in the window for safe-to-spend 1`] = `
{
  "accountSummaries": [
    {
      "accountId": "cash-1",
      "accountName": "Unknown",
      "minBalance": 750,
      "safeToSpend": 750,
      "shortfall": 0,
      "startingBalance": 1000,
      "usageDetails": {
        "topInflows": [],
        "topOutflows": [
          {
            "amount": 250,
            "id": undefined,
            "isPostIncome": false,
            "name": "Primary Card",
            "source": "LIABILITY",
          },
        ],
        "totalInflow": 0,
        "totalOutflow": 250,
      },
    },
  ],
  "breakdowns": {
    "budget": {
      "currentMonthRemaining": 0,
      "nextMonthDays": 6,
      "nextMonthProjected": 0,
    },
    "committed": [
      {
        "accountId": "cc-1",
        "accountName": "Primary Card",
        "amount": 250,
        "details": [
          {
            "amount": 250,
            "dayOffset": 12,
            "id": "cc-1-12",
            "name": "Primary Card",
            "type": "FALLBACK",
          },
        ],
      },
    ],
    "debt": [
      {
        "accountId": "cc-1",
        "accountName": "Primary Card",
        "amount": 250,
        "dayOffset": 12,
        "type": "FALLBACK",
      },
    ],
    "income": [],
    "liabilities": {
      "commitments": [
        {
          "accountId": "cc-1",
          "accountName": "Primary Card",
          "amount": 250,
          "details": [
            {
              "amount": 250,
              "dayOffset": 12,
              "id": "cc-1-12",
              "name": "Primary Card",
              "type": "FALLBACK",
            },
          ],
        },
      ],
      "committed": 250,
      "committedCreditCard": 250,
      "committedOther": 0,
      "debtEntries": [
        {
          "accountId": "cc-1",
          "accountName": "Primary Card",
          "amount": 250,
          "dayOffset": 12,
          "type": "FALLBACK",
        },
      ],
      "flows": [
        {
          "accountId": "cash-1",
          "amount": -250,
          "context": "Current bill",
          "dayOffset": 12,
          "name": "Primary Card",
          "source": "LIABILITY",
          "type": "OUTFLOW",
        },
      ],
      "total": 400,
      "totalCreditCard": 400,
      "totalOther": 0,
    },
  },
  "metadata": {
    "committedSubtypes": [],
    "debtSubtypes": [
      "CREDIT_CARD",
    ],
    "firstMajorInflowDay": null,
  },
  "projections": {
    "dailyBudgetBurns": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "flowByDayOffset": Map {
      12 => -250,
    },
    "points": [
      {
        "isProjected": true,
        "timestamp": 1772908200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1772994600000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773081000000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773167400000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773253800000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773340200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773426600000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773513000000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773599400000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773685800000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773772200000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773858600000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1773945000000,
        "value": 1000,
      },
      {
        "dailyBurn": 0,
        "details": [
          {
            "amount": 250,
            "context": "Current bill",
            "name": "Primary Card",
            "type": "OUTFLOW",
          },
        ],
        "isProjected": true,
        "timestamp": 1774031400000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774117800000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774204200000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774290600000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774377000000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774463400000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774549800000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774636200000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774722600000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774809000000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774895400000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1774981800000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775068200000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775154600000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775241000000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775327400000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775413800000,
        "value": 750,
      },
      {
        "dailyBurn": 0,
        "details": undefined,
        "isProjected": true,
        "timestamp": 1775500200000,
        "value": 750,
      },
    ],
    "safeToSpendDailyBreakdown": Map {
      12 => [
        {
          "amount": 250,
          "context": "Current bill",
          "name": "Primary Card",
          "type": "OUTFLOW",
        },
      ],
    },
  },
  "summary": {
    "firstMajorInflowDay": null,
    "safeDaysCount": null,
    "safeToSpend": 750,
    "shortfall": 0,
    "totalCommittedPlanned": 0,
    "totalFutureInflow": 0,
    "totalOrganicInflow": 0,
    "totalOrganicOutflow": 0,
    "trajectoryMinBalance": 750,
  },
}
`;
